[package]
name = "bom-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.0"
semver = "1.0.13"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
