[workspace]
resolver = "2"

members = [
    "allow-list",
]

[workspace.lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "deny"
unreachable_pub = "deny"
trivial_casts = "deny"
warnings = "deny"
unused = { level = "deny", priority = -1 }
unused_crate_dependencies = "deny"
missing_copy_implementations = "deny"
