[package]
name = "bom-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-bom = { path = "../cargo-bom" }
clap = { version = "4.5.4", features = ["derive"] }
semver = "1.0"
serde_json = "1.0.83"


