[package]
name = "cargo-bom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.0"
chrono = { version = "0.4.22", features = ["serde"] }
semver = "1.0"
serde = { version = "1.0.143", features = ["derive"] }

